[package]
name = "proksis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
pingora = { version = "0.1.0" }
log = "0.4.21"
clap = "4.5.3"
async-trait = "0.1.79"
structopt = "0.3.26"