[package]
name = "proksis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
pingora = { version = "0.1.0" }
log = "0.4.21"
clap = "4.5.3"
async-trait = "0.1.79"
structopt = "0.3.26"
bytes = "1.6.0"
atoi = "1.0.0"
tracing = "0.1.40"
tokio-stream = "0.1.15"
async-stream = "0.3.5"