[package]
name = "proksis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
#log = "0.4.21"
#clap = "4.5.3"
bytes = "1.6.0"
atoi = "1.0.0"
tracing = "0.1.40"
tokio-stream = "0.1.15"
async-stream = "0.3.5"
rustis = "0.12.9"
time = "0.3.34"
anyhow = "1.0.81"